prod fix to new version

--- a/app/index.html
+++ b/app/index.html
@@ -118,7 +118,7 @@
 </div>
 <!--All content changes from here on the basis of routing mechanisms-->
 <div ui-view
-     class="main-content">
+     class="main-content" id="route-content">
 
 </div>
 </body>
